# udacity-ai-trading-strategies

./: .gitignore  pyproject.toml
data/project01/preprocessed/: apple-monthly-returns.csv  apple.csv  gdp.csv  inflation.csv  inflation_quarterly.csv  inflation_weekly.csv  microsoft-monthly-returns.csv  microsoft.csv
notebooks/: 01-preparing-for-data-analysis.ipynb  02-evaluating-returns-and-backtesting.ipynb  03-reinforcement learning.ipynb  03-reinforcement-learning.ipynb  04-classification-model-optimization.ipynb  05-momentum-based-trading.ipynb  Evaluating-returns-and-backtesting.ipynb  Preparing-for-data-analysis-project-student.ipynb
notebooks/05/: Exercise1.ipynb  Exercise2.ipynb  Exercise3.ipynb  Exercise4.ipynb
