[tool.poetry]
name = "udacity-ai-trading-strategies"
version = "0.1.0"
description = ""
authors = ["Jakub Zapletal <jakub.zapletal@eon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.0"
jupyter = "^1.1.1"
plotly = "^6.1.2"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
black = {extras = ["jupyter"], version = "^25.1.0"}
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.16.0"
scipy = "^1.15.3"
scikit-learn = "^1.7.0"
yahoo-finance = "^1.4.0"
yfinance = "^0.2.63"
keras = "^3.10.0"
tqdm = "^4.67.1"
tensorflow = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
